application with views

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,4 +13,6 @@
                 <%= render partial: "shared/single_comment", locals: { comment: comment } %>
                 <% end %>
      </div>
+     <%= button_to link_to "New Comment", new_user_post_comment_path(@user.id, @post.id) %>
+     <%= button_to "Add Likes", user_post_likes_path(@user, @post), params: { like: { author_id: @user.id, post_id: @post.id}}%>
 </div>
