--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,7 @@
  *= require_tree .
  *= require_self
  */
-
-#users {
+ #users {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,17 +64,24 @@
   text-align: right;
 }
 
+#newCommentsTemplate,
+#newPostTemplate,
 #userTemplate,
 #postTemplate {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 375px;
 }
 
 button {
   margin-top: 20px;
 }
 
+#newPostTemplate,
 #loginForm {
   display: flex;
   flex-direction: column;
@@ -84,11 +90,11 @@ button {
   margin-top: 50px;
 }
 
-input[type="text"] {
-  margin: 20px;
+input[type='text'] {
+  margin: 10px;
 }
 
-input[type="submit"] {
+input[type='submit'] {
   margin: 30px;
 }
 
