--- a/app/views/shared/_single_user.html.erb
+++ b/app/views/shared/_single_user.html.erb
@@ -1,8 +1,8 @@
 <div id="singleUser"> 
         <img src="<%= user.photo%>" alt="photo"/>
       <div id="userInfo">
-       <h3><%= link_to user.name, user_path(user)  %></h3>
-        <label >Number of posts: <%= user.post_counter %><label/>
+        <h3><%= link_to user.name, user_path(user)  %></h3>
+        <label >Number of posts: <%= user.post_counter %></label>
       </div>
  </div>
  
