--- a/app/views/devise/registration/new.html.erb
+++ b/app/views/devise/registration/new.html.erb
@@ -1,3 +1,5 @@
+<div class='sign-up'>
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -5,7 +7,21 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email"%>
+  </div>
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name"%>
+  </div>
+
+  <div class="field">
+    <%= f.label :Bio %><br />
+    <%= f.text_field :bio, autofocus: true, autocomplete: "bio" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :Photo %><br />
+    <%= f.text_field :photo, autofocus: true, autocomplete: "photo" %>
   </div>
 
   <div class="field">
