--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
   <body>
 
+    <div class='sign-up'>
+
  <%if user_signed_in?%>
     <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: 'btn' %>
   <%end%>
@@ -18,5 +20,6 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
+    </div>
   </body>
 </html>
