--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
 
     <div class='sign-up'>
 
- <%if user_signed_in?%>
-    <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: 'btn' %>
-  <%end%>
+    <div class="sign">
+      <%if user_signed_in?%>
+        <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+      <%end%>
+   </div>
+   <%= yield %>
+    <p class="notice"><%= notice %></p>
 
-  <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-    <%= yield %>
+
     </div>
   </body>
 </html>
