--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,6 +95,12 @@ input[type="text"] {
   margin: 0px;
 }
 
+.field-forget {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
 input[type="submit"] {
   margin: 30px;
 }
