--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <% @users.each do |user| %>
+<div class='all_users' >
   <div class='user_element'>
    <div class='user_img'><img src=<%= user.image %> alt="User image" width="150" height="150"></div>
    <div class='user_name'><h2><%= link_to user.name, user_path(user) %></h2><p>Number of posts: <%= user.posts_counter %></p></div>
-</div>
+  </div>
+  </div>
 <% end %>
