--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,18 +1,11 @@
-<h1>Add a new Post</h1>
-
-<%= form_with model: [@current_user, @current_user.posts.build] do |form| %>
-<div>
-  <%= form.label :title, "Post Title" %><br>
-  <%= form.text_field :title %>
-</div>
-
-<div>
-  <%= form.label :text, "Post Text" %><br>
-  <%= form.text_area :text, size: "70x5" %>
-</div>
-
-  <%= form.hidden_field :author_id, value: @current_user.id %>
-  <%= form.hidden_field :comments_counter, value: 0 %>
-  <%= form.hidden_field :likes_counter, value: 0 %>
-  <%= form.submit "Create Post" %>
-<% end %>
+<div id="newPostTemplate">
+<h1>New Post </h1>
+<%= render partial: "shared/single_user", locals: { user: @user } %>
+ <%= form_with model: @post, url: user_posts_path do |f| %>
+      <%= f.label :title %><br>
+      <%= f.text_field :title %><br>
+      <%= f.label :text %><br>
+      <%= f.text_area :text %><br>
+      <%= f.submit "Create Post" %>
+    <% end %>  
+<div> 
