--- a/app/views/shared/_single_post.html.erb
+++ b/app/views/shared/_single_post.html.erb
@@ -1,7 +1,8 @@
 <div id="singlePost">
-        <h3 class="post_title"> <%= link_to "Post ##{post.id}", user_post_path(params[:id],post.id) %> </h3>
-       <p><b><%= post.title %></b></p>
-
+        <h3 class="post_title"> <%= link_to "Post ##{post.id}", user_post_path(@user,post) %> </h3>
+        <p><b><%= post.title %></b></p>
         <p><%= post.text %></p>
         <label class="counters">Comments:<%= post.comments_counter %> Likes:<%= post.likes_counter %> </label>
-</div>
+        <%= button_to link_to "Delete", user_post_path(@user.id, post.id), method: :delete%>
+         
+</div> 
