delete comment implemented

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
   <div class="field">
     <%= f.label :Photo %><br />
-    <%= f.text_field :photo, autofocus: true, autocomplete: "photo", placeholder: 'Enter Photo Link' %>
+    <%= f.text_field :image, autofocus: true, autocomplete: "photo", placeholder: 'Enter Photo Link' %>
   </div>
 
   <div class="field">
