--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div id="commentsSection">
                 <% @comments.each do |comment| %>
-                <%= render partial: "shared/single_comment", locals: { comment: comment } %>
+                <%= render partial: "shared/single_comment", locals: { post: @post, comment: comment } %>
                 <% end %>
      </div>
      <%= button_to link_to "New Comment", new_user_post_comment_path(@user.id, @post.id) %>
