--- a/app/views/shared/_single_comment.html.erb
+++ b/app/views/shared/_single_comment.html.erb
@@ -1,1 +1,3 @@
-<label> Username: <%=@user.name%>: <%= comment.text%></label>  </br>
+<label> Username: <%=@user.name%>: <%= comment.text%></label>
+
+<%= button_to 'Delete comment', user_post_comment_path(@user.id, @post.id,comment.id), method: :delete %>
