--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,9 +24,9 @@
   </div>
 
   <div class="field">
-  <%= f.label :Role %><br />
-  <%= f.text_field :role, autofocus: true, autocomplete: "role", value: 'Admin' %>
-</div>
+    <%= f.label :Role %><br />
+    <%= f.text_field :role, autofocus: true, autocomplete: "role", placeholder: 'Role' %>
+  </div>
 
   <div class="field">
     <%= f.label :password %>
