--- a/app/views/shared/_single_comment.html.erb
+++ b/app/views/shared/_single_comment.html.erb
@@ -1,5 +1,5 @@
 <label> Username: <%=@user.name%>: <%= comment.text%></label>
 
 <% if can? :destroy, comment %>
-    <%= button_to 'Delete comment', user_post_comment_path(@user.id, @post.id,comment.id), method: :delete %>
+    <%= button_to 'Delete comment', user_post_comment_path(@user, post, comment), method: :delete %>
 <% end %>
